--- a/imgui.ini
+++ b/imgui.ini
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][DockSpaceViewport_286331153]
 Pos=0,22
-Size=1920,1058
+Size=2504,1344
 Collapsed=0
 
 [Window][CatmullRomDemo]
@@ -89,8 +89,8 @@ Size=401,290
 Collapsed=0
 
 [Window][Scene]
-Pos=0,733
-Size=429,347
+Pos=0,925
+Size=448,441
 Collapsed=0
 DockId=0x0000001F,0
 
@@ -253,13 +253,13 @@ Collapsed=0
 
 [Window][###box_hierarchy_GameBoard]
 Pos=0,22
-Size=429,709
+Size=448,901
 Collapsed=0
 DockId=0x00000015,0
 
 [Window][###box_hierarchy_CardPicker]
 Pos=0,22
-Size=429,709
+Size=448,901
 Collapsed=0
 DockId=0x00000015,1
 
@@ -274,8 +274,8 @@ Size=636,544
 Collapsed=0
 
 [Window][###selected_box_popup_GameBoard]
-Pos=1415,531
-Size=358,604
+Pos=1367,307
+Size=480,518
 Collapsed=0
 
 [Window][###box_hierarchy_card.yaml]
@@ -467,15 +467,15 @@ Column 0  Weight=1.0000
 Column 1  Width=65
 
 [Docking][Data]
-DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,22 Size=1920,1058 Split=X
-  DockNode                  ID=0x0000000C Parent=0x763BCB4D SizeRef=429,1058 Split=Y
+DockSpace                   ID=0x763BCB4D Window=0x117850BC Pos=0,22 Size=2504,1344 Split=X
+  DockNode                  ID=0x0000000C Parent=0x763BCB4D SizeRef=448,1058 Split=Y
     DockNode                ID=0x0000000D Parent=0x0000000C SizeRef=456,477 Selected=0xB54AE55D
     DockNode                ID=0x00000013 Parent=0x0000000C SizeRef=456,483 Split=Y Selected=0xE192E354
-      DockNode              ID=0x00000015 Parent=0x00000013 SizeRef=428,709 Selected=0x36E830FD
+      DockNode              ID=0x00000015 Parent=0x00000013 SizeRef=428,709 Selected=0xB0A9E36D
       DockNode              ID=0x00000019 Parent=0x00000013 SizeRef=428,347 Split=Y Selected=0xE192E354
         DockNode            ID=0x0000001F Parent=0x00000019 SizeRef=418,496 Selected=0xE192E354
         DockNode            ID=0x00000020 Parent=0x00000019 SizeRef=418,560 Selected=0xD3D128AE
-  DockNode                  ID=0x00000014 Parent=0x763BCB4D SizeRef=1489,1058 Split=X
+  DockNode                  ID=0x00000014 Parent=0x763BCB4D SizeRef=2054,1058 Split=X
     DockNode                ID=0x00000016 Parent=0x00000014 SizeRef=382,1080 Selected=0x881B4C42
     DockNode                ID=0x0000001A Parent=0x00000014 SizeRef=1536,1080 Split=X
       DockNode              ID=0x00000017 Parent=0x0000001A SizeRef=504,1080 Split=Y Selected=0x881B4C42
